2006-12-27  Mike Cvet  <mcvet@redhat.com>

	* fcatch.java (run): Initialize arguments ArrayList here.
	Removed call to secondary trace() in util.FCatch.

2006-12-22  Nurdin Premji  <npremji@redhat.com>

	* fcore.java (main): Reflect changes from Util.parsePid and Util.addConsoleOptions.
	(addOptions): 	Ditto.
	* fcatch.java (run): Ditto.
	* ftrace.java (addOptions): Ditto. 
	* fstack.java (main): Ditto.
	(addOptions): Ditto.
	
2006-12-22  Mike Cvet  <mcvet@redhat.com>

	* fcatch.java: Re-Added. Fixes #3733.
	(run): Added console logging options.
	* fcatch.xml: Added.

2006-12-21  Andrew Cagney  <cagney@redhat.com>

	* ftrace.java: Use Config's getVersion, instead of VERSION.
	* fstep.java: Ditto.  Fix typo, program's name is "fstep".

2006-12-20  Nurdin Premji  <npremji@redhat.com>
	
	* ftrace.xml: Made mention of option parsing bug.

2006-12-19  Nurdin Premji  <npremji@redhat.com>

	* fcore.java: Cleaned out unnecessay logging option residue.
	(main): Switched to use a Util.PidParser instead of Parser and 
	Util.parsePids.	
	* fstack.java: Ditto.	

2006-12-18  Nurdin Premji  <npremji@redhat.com>

	* fstack.java: Ran gnu formatter.
	 (main.parser.notifyFile.addFailed): Added, should be defined here, not
	 in ProcBlockAction.

2006-12-18  Mark Wielaard  <mark@klomp.org>

	* fstep.java: New file.
	* fstep.xml: New file.

2006-12-15  Nurdin Premji  <npremji@redhat.com>

	* fcore.java (addOptions): Changed to use frysk.util.Util.addConsoleOptions()
	* fstack.java (addOptions): Ditto.
	* ftrace.java (addOptions): Added logging options using Util.addConsoleOptions

	* fcore.java: Reverted ProcException addition.
	* fstack.java: Ditto.

	* fcore.java (main.procFound): Added try catch for creating CoredumAction.		
	* fstack.java (main.procFound): Ditto. Changed general catch Exception to 
	specific catch NumberFormatException.

2006-12-15  Phil Muldoon  <pmuldoon@redhat.com>

	* fcore.java: (notifyFile): Change error handling to use