@@ -44,14 +44,11 @@ import java.util.HashSet;
 import java.util.StringTokenizer;
 import java.util.logging.Logger;
 
-import frysk.EventLogger;
-
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 
 import frysk.util.Ftrace;
 import frysk.util.StracePrinter;
-import frysk.util.Util;
 
 import gnu.classpath.tools.getopt.FileArgumentCallback;
 import gnu.classpath.tools.getopt.Option;
@@ -59,6 +56,7 @@ import gnu.classpath.tools.getopt.OptionException;
 import gnu.classpath.tools.getopt.Parser;
 
 import frysk.Config;
+import frysk.EventLogger;
 
 
 class ftrace
@@ -66,8 +64,7 @@ class ftrace
 //Where to send output.
     PrintWriter writer;
    
-    protected static final Logger logger = EventLogger.get("logs/",
-    "frysk_core_event.log");
+    protected static final Logger logger = Logger.getLogger("frysk");
     
     // Set of all Syscalls we want to trace.
     // This is null if the user hasn't specified any.
@@ -81,7 +78,7 @@ class ftrace
 
     private void addOptions(Parser parser)
     {
-	Util.addConsoleOptions(parser);
+	EventLogger.addConsoleOptions(parser);
         parser.add(new Option('o', "output file name", "FILE") {
             public void parsed(String filename) throws OptionException
             {
